# VTU

./: .gitattributes  .gitignore  README.md  pyproject.toml
vtu/: db.sqlite3  manage.py  requirements.txt
vtu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vtu/media/: sql_queries.txt
vtu/static/css/: style.css
vtu/templates/: AboutUs.html  EarningNotify.html  FeedBackMail.html  NotesApprove.html  NotesLogin.html  NotesMain.html  OTPMail.html  PrivacyPolicy.html  ReRegister.html  Redeem.html  Statement.html  SubDropDown.html  Terms_of_use.html  ThankYou.html  ThanksForContactingUs.html  index.html  userNotesUpload.html
vtu/vtu/: Autherizer.py  OTPGenerator.py  admin.py  asgi.py  automaticmail.py  loadData.py  models.py  monetize.py  render.py  serializers.py  settings.py  template_views.py  urls.py  views.py  wsgi.py
vtu/vtu/Scripts/: data.csv  data1.csv  datamech.csv
vtu/vtu/migrations/: 0001_initial.py  0002_auto_20201214_1719.py  0003_mastersubjects.py  0004_masternotes_subject.py  0005_auto_20201216_1151.py  0006_masterquestionpapers.py  0007_masterprogramid.py  0008_mastervideolab.py  0009_auto_20210101_0726.py  0010_mastervideolab_thumbnail.py  0011_appforceupdaterequired_appversion_deviceauth.py  0012_mastersyllabuscopy.py  0013_mastersyllabuscopy_branch.py  0014_masterabout.py
